--- a/src/app/okr/new-okr/new-okr.component.html
+++ b/src/app/okr/new-okr/new-okr.component.html
@@ -5,7 +5,7 @@
     <span class="input-group-btn">
       <button class="btn btn-dark" style="width: 2rem;" title="Delete Key Result" (click)="removeKeyResult()">x</button>
     </span>
-    <input class="form-control" [(ngModel)]="kr.keyResult" placeholder="Key result" />
+    <input class="form-control" [(ngModel)]="kr.keyResult" placeholder="Key Result" />
   </div>
   <button class="btn btn-dark mt-1" style="width: 2rem;" (click)="addKeyResult()">+</button>
   <div class="form-group">
