--- a/src/app/okr/edit-okr/edit-okr.component.html
+++ b/src/app/okr/edit-okr/edit-okr.component.html
@@ -6,7 +6,7 @@
       <input *ngIf="kr" class="form-control input-sm mb-0 mt-1" [(ngModel)]="kr.keyResult" placeholder="Key Result" />
     </div>
     <div class="col-xs-2 px-0">
-      <input type="number" min=0 max=100 class="form-control input-sm mb-0 mt-1 pr-0 pl-1" [(ngModel)]="kr.progress" placeholder="progress" />
+      <input *ngIf="kr" type="number" min=0 max=100 class="form-control input-sm mb-0 mt-1 pr-0 pl-1" [(ngModel)]="kr.progress" placeholder="progress" />
     </div>
     <div class="col-xs-1 pl-0 pr-1">
       <p class="mt-2 mb-0">%</p>
