--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -1,5 +1,5 @@
 <div class="okr card bg-light border-0 p-2 m-1">
-  <h6 *ngIf="averageProgress" class="card-subtitle mt-1 mb-2">
+  <h6 class="card-subtitle mt-1 mb-2">
     <span *ngIf="averageProgress==100" class="badge badge-success">{{averageProgress}}%</span>
     <span *ngIf="averageProgress<100" class="badge badge-primary">{{averageProgress}}%</span>
     <span class="dropdown float-right">
