--- a/src/app/okr/edit-okr/edit-okr.component.html
+++ b/src/app/okr/edit-okr/edit-okr.component.html
@@ -18,12 +18,12 @@
   </div>
   <button class="btn btn-sm btn-success mt-1" (click)="addKeyResult()">New Key Result</button>
   <div class="form-group mt-2">
-    <label class="mt-1" for="ownerSearchBox">Assigned to <span class="badge badge-primary">{{owner.name}}</span></label>
+    <label class="mt-1" for="ownerSearchBox">Assigned to <span *ngIf="owner" class="badge badge-primary">{{owner.name}}</span></label>
     <input class="form-control input-sm p-1" #ownerSearchBox (keyup)="ownerSearch(ownerSearchBox.value)"
       placeholder="Assign to user" />
     <ul *ngIf="users$" class="list-group px-1 py-0">
       <li *ngFor="let user of users$ | async" class="list-group-item py-0 my-0">
-        <a class="btn" [ngClass]="{'bg-light text-primary': user._id==okr.userId}"
+        <a class="btn" [ngClass]="{'bg-light text-primary': user._id==owner._id}"
           (click)="assign(user);ownerSearchBox.value=''">
           {{user.name}}
         </a>
