--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,12 +3,47 @@
 </h2>
 <button *ngIf="!userForm" class="btn btn-primary my-4 mx-1" (click)="showUserForm()">Add User</button>
 <app-new-user *ngIf="userForm" (hide)="hideUserForm($event)"></app-new-user>
-<div class="row mb-4 mx-1">
-  <div class="col-sm rounded bg-light">
-    <ul class="list-group">
-      <li *ngFor="let user of users" class="list-group-item">
-        {{user.name}}
-      </li>
-    </ul>
-  </div>
+<div class="bg-light py-2 rounded mx-1">
+  <table class="table table-striped bg-light my-1">
+    <thead>
+      <tr style="border-top: 0">
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users;let i = index">
+        <td>{{user.name}}</td>
+        <td>{{user.email}}</td>
+        <td>
+          <button type="button" class="btn btn-sm btn-danger float-right table-button mx-1" data-toggle="modal"
+            data-target="#deleteModal" (click)="initDelete(user)">Delete</button>
+          <button class="btn btn-sm btn-secondary float-right table-button mx-1">Edit</button>
+        </td>
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Are you sure?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div *ngIf="initDeleteUser" class="modal-body">
+                Do you want to delete {{initDeleteUser.name}} from PureOKRs?
+                It is not possible to recover the user after it is deleted.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="confirmDelete()">
+                  Yes, delete
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </tr>
+    </tbody>
+  </table>
 </div>
