--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,11 +27,9 @@
 <main class="bd-masthead bg-dark" role="main">
   <div class="container-fluid pt-4" style="min-height: 60vh;">
     <div class="row">
-      <div class="col-sm-1"></div>
-      <div class="col">
+      <div class="col mx-4">
         <router-outlet></router-outlet>
       </div>
-      <div class="col-sm-1"></div>
     </div>
   </div>
 </main>
