fixed margins for mobile on login and register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 <main class="bd-masthead bg-dark" role="main">
   <div class="container-fluid pt-4" style="min-height: 60vh;">
     <div class="row">
-      <div class="col mx-4">
+      <div class="col px-4">
         <router-outlet></router-outlet>
       </div>
     </div>
