fixed margins for mobile on login and register

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm rounded bg-light p-4 ml-4 mb-4 mr-4">
+  <div class="col-sm rounded bg-light p-4 mb-4 mx-2">
     <form (submit)="login()" style="width: 18rem;">
       <div class="form-group">
         <label for="email">Email</label>
@@ -26,7 +26,7 @@
       <button type="button" routerLink="/register" class="btn btn-success m-2">Register</button>
     </form>
   </div>
-  <div class="col-sm rounded bg-light p-4 mb-4 mr-4 ml-4">
+  <div class="col-sm rounded bg-light p-4 mb-4 mx-2">
     <h5>Why Objectives and Key Results?</h5>
     <ul>
       <li>
