it is now possible to invite other users and to reset forgotten passwords

--- a/src/app/okr/edit-okr/edit-okr.component.html
+++ b/src/app/okr/edit-okr/edit-okr.component.html
@@ -45,6 +45,6 @@
   </div>
   <div class="form-inline">
     <button class="btn btn-success mr-1" (click)="save()">Save</button>
-    <button class="btn btn-danger" routerLink="/company/okrs">Go back and discard changes</button>
+    <button class="btn btn-danger" routerLink="/company/okrs">Discard</button>
   </div>
 </div>
