--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,10 +22,19 @@
         </div>
       </li>
     </ul>
+    <div *ngIf="auth.isLoggedIn()">
+      <a class="navbar-brand">
+        <svg width="40" height="40">
+          <circle cx="20" cy="20" r="20" fill="#5cb85c">
+          </circle>
+          <text fill="white" x="20" y="27" text-anchor="middle">{{auth.getUserDetails()?.name.charAt(0)}}</text>
+        </svg>
+      </a>
+    </div>
   </div>
 </nav>
 <main class="bd-masthead bg-dark" role="main">
-  <div class="container-fluid pt-4" style="min-height: 60vh;">
+  <div class="container-fluid pt-4" style="min-height: 70vh;">
     <div class="row">
       <div class="col px-4">
         <router-outlet></router-outlet>
@@ -46,10 +55,10 @@
         <h5 class="text-uppercase">Get in touch</h5>
         <ul class="list-unstyled">
           <li>
-            <p>nilseng.com</p>
+            <p><a class="text-light" href="http://www.nilseng.com" target="_blank">nilseng.com</a></p>
           </li>
           <li>
-            <p>teodor.nilseng@gmail.com</p>
+            <p><a class="text-light" href="mailto:teodor.nilseng@gmail.com">teodor.nilseng@gmail.com</a></p>
           </li>
         </ul>
       </div>
