--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,8 +25,10 @@
       <button type="submit" class="btn btn-primary m-2">Log in</button>
       <button type="button" routerLink="/register" class="btn btn-success m-2">Register</button>
     </form>
+    <button class="btn btn-sm btn-link" routerLink="/resetpassword">Forgot your password?</button>
   </div>
   <div class="col-sm rounded bg-light p-4 mb-4 mx-2">
+    <h5 class="font-italic">This is the simplest OKR tool on the web.</h5>
     <h5>Why Objectives and Key Results?</h5>
     <ul>
       <li>
@@ -51,11 +53,5 @@
         Mobile First
       </li>
     </ul>
-    <h5>What are Objectives and Key Results?</h5>
-    <p>By using Objectives and Key Results you will be able to make your organization work focused towards
-        common goals. An Objective is what you would like to achieve, while Key Results are what you
-      need to measure to reach the objective. Combine these and you have an OKR. PureOKRs aligns all
-      OKRs in your organization, assigns them to employees and let's you measure your progress.
-    </p>
   </div>
 </div>
