--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -14,9 +14,9 @@
         </svg>
       </button>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Add Child Objective</a>
+        <a class="dropdown-item" href="/new-okr/{{okr._id}}">Add Child Objective</a>
         <a class="dropdown-item" routerLink="/edit-okr/{{okr._id}}">Edit</a>
-        <a class="dropdown-item" href="#" (click)="deleteOKR()">Delete</a>
+        <a class="dropdown-item" (click)="deleteOKR()">Delete</a>
       </div>
     </span>
   </h6>
