--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,15 @@
         <a routerLink="/login" class="nav-link">Log In</a>
       </li>
       <li *ngIf="auth.isLoggedIn()" class="nav-item">
+        <a routerLink="/okr-tree" class="nav-link">Tree view</a>
+      </li>
+      <li *ngIf="auth.isLoggedIn()" class="nav-item">
         <a routerLink="/company/users" class="nav-link">Users</a>
       </li>
       <li *ngIf="auth.isLoggedIn()" class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Logged in as {{auth.getUserDetails()?.name}} - {{auth.getUserDetails()?.company}}
+          {{auth.getUserDetails()?.name}} - {{auth.getUserDetails()?.company}}
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/" (click)="auth.logout()">Logout</a>
