--- a/src/app/okr-tree/okr-tree.component.html
+++ b/src/app/okr-tree/okr-tree.component.html
@@ -1,2 +1,2 @@
-<h5 class="text-success float-right pb-2 pr-2 pt-0">UNDER DEVELOPMENT</h5>
+<h5 class="text-success pb-2 pl-2 pt-0">UNDER DEVELOPMENT</h5>
 <app-tree-visual></app-tree-visual>
