--- a/src/app/okr-tree/tree-visual/tree-visual.component.html
+++ b/src/app/okr-tree/tree-visual/tree-visual.component.html
@@ -1,4 +1,7 @@
-<svg #svg [attr.width]="_options.width" [attr.height]="_options.height" style="display: block; margin:auto;">
+<svg #svg 
+  [attr.width]="_options.width" 
+  [attr.height]="_options.height" 
+  style="display: block; margin:auto;margin-bottom:40px">
   <rect [attr.height]="_options.height" [attr.width]="_options.width" rx="2" ry="2" fill="#f9f9f9"></rect>
   <g [zoomableOf]="svg">
     <g *ngFor="let level of nodes">
