--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -14,7 +14,7 @@
         </svg>
       </button>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="/new-okr/{{okr._id}}">Add Child Objective</a>
+        <a class="dropdown-item" (click)="addChild()">Add child OKR</a>
         <a class="dropdown-item" routerLink="/edit-okr/{{okr._id}}">Edit</a>
         <a class="dropdown-item" (click)="deleteOKR()">Delete</a>
       </div>
