--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,7 +1,7 @@
 <h2 class="text-light m-1">
   {{user.company}}'s objectives and key results.
 </h2>
-<app-new-okr [parentId]="parentId" (savedOkr)="savedOkr($event)" (clearP)="clearParent($event)"></app-new-okr>
+<app-new-okr [parentId]="parentId" (savedOkr)="savedOkr($event)" (clearP)="clearParent()"></app-new-okr>
 <div *ngIf="okrs">
   <app-okr 
     *ngFor="let okr of okrs" 
