--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,65 +1,69 @@
 <div class="row">
-  <div class="col-sm rounded bg-light p-4 mb-4 mx-2">
-    <form (submit)="register()" style="width: 18rem;">
-      <div class="form-group">
-        <label for="company">Company</label>
-        <input type="text" class="form-control" name="company" placeholder="Enter company"
-          [(ngModel)]="credentials.company">
-      </div>
-      <div class="form-group">
-        <label for="name">Full name</label>
-        <input type="text" class="form-control" name="name" placeholder="Enter your name"
-          [(ngModel)]="credentials.name">
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input id="email" name="email" type="email" class="form-control" required placeholder="Enter email"
-          [(ngModel)]="credentials.email" #email="ngModel">
-        <div *ngIf="email.invalid && (email.dirty || email.touched)" class=" alert alert-warning mx-1 my-0">
-          <div *ngIf="email.errors.required">
-            Email is missing or invalid
+  <div class="col-sm mb-4">
+    <div class="bg-light rounded p-4 h-100">
+      <form (submit)="register()" style="width: 18rem;">
+        <div class="form-group">
+          <label for="company">Company</label>
+          <input type="text" class="form-control" name="company" placeholder="Enter company"
+            [(ngModel)]="credentials.company">
+        </div>
+        <div class="form-group">
+          <label for="name">Full name</label>
+          <input type="text" class="form-control" name="name" placeholder="Enter your name"
+            [(ngModel)]="credentials.name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" class="form-control" required placeholder="Enter email"
+            [(ngModel)]="credentials.email" #email="ngModel">
+          <div *ngIf="email.invalid && (email.dirty || email.touched)" class=" alert alert-warning mx-1 my-0">
+            <div *ngIf="email.errors.required">
+              Email is missing or invalid
+            </div>
           </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input id="password" type="password" class="form-control" name="password" placeholder="Password"
-          [(ngModel)]="credentials.password" required #password="ngModel">
-        <div *ngIf="password.invalid && (password.dirty || password.touched)" class=" alert alert-warning mx-1 my-0">
-          <div *ngIf="password.errors.required">
-            Password is missing or invalid
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input id="password" type="password" class="form-control" name="password" placeholder="Password"
+            [(ngModel)]="credentials.password" required #password="ngModel">
+          <div *ngIf="password.invalid && (password.dirty || password.touched)" class=" alert alert-warning mx-1 my-0">
+            <div *ngIf="password.errors.required">
+              Password is missing or invalid
+            </div>
           </div>
         </div>
-      </div>
-      <div *ngIf="message" class=" alert alert-warning mx-1 my-0">{{message}}</div>
-      <button type="submit" class="btn btn-success m-2">Register</button>
-    </form>
+        <div *ngIf="message" class=" alert alert-warning mx-1 my-0">{{message}}</div>
+        <button type="submit" class="btn btn-success m-2">Register</button>
+      </form>
+    </div>
   </div>
-  <div class="col-sm rounded bg-light p-4 mb-4 mx-2">
-    <h5 class="font-italic">This is the simplest OKR tool on the web.</h5>
-    <h5>Why Objectives and Key Results?</h5>
-    <ul>
-      <li>
-        Improve collaboration
-      </li>
-      <li>
-        Align your organization
-      </li>
-      <li>
-        Focus on what matters
-      </li>
-    </ul>
-    <h5>PureOKRs Features</h5>
-    <ul>
-      <li>
-        Easy to use
-      </li>
-      <li>
-        Fully cloud based
-      </li>
-      <li>
-        Mobile First
-      </li>
-    </ul>
+  <div class="col-sm mb-4">
+    <div class="bg-light rounded p-4 h-100">
+      <h5 class="font-italic">This is the simplest OKR tool on the web.</h5>
+      <h5>Why Objectives and Key Results?</h5>
+      <ul>
+        <li>
+          Improve collaboration
+        </li>
+        <li>
+          Align your organization
+        </li>
+        <li>
+          Focus on what matters
+        </li>
+      </ul>
+      <h5>PureOKRs Features</h5>
+      <ul>
+        <li>
+          Easy to use
+        </li>
+        <li>
+          Fully cloud based
+        </li>
+        <li>
+          Mobile First
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
